--- a/src/scss/layouts/layout_992/_index.scss
+++ b/src/scss/layouts/layout_992/_index.scss
@@ -1,11 +1,14 @@
+@import "header";
 @import "banner";
 @import "title";
 @import "heroes";
+@import "tilleg";
+@import "show";
 @import "prices";
 @import "why";
-@import "show";
 @import "kontakt";
 @import "where";
 @import "form";
-@import "tilleg";
-@import "header";
+@import "gallery";
+@import "feedback";
+@import "footer";
