--- a/src/scss/layouts/layout_000/_banner.scss
+++ b/src/scss/layouts/layout_000/_banner.scss
@@ -6,7 +6,8 @@
   overflow: hidden;
   box-shadow: 0px 40px 65px 5px rgba(212, 148, 30, 0.5);
 
-  background-image: url(../../../i/img/bg.png);
+  background-image: url(../../../i/img/bg-500.png);
+  background-size: cover;
   background-position: center;
   border-radius: 40px;
   position: relative;
@@ -83,4 +84,8 @@
     max-width: 360px;
     margin-bottom: 0;
   }
+}
+
+.title-div_motor_button {
+  display: none;
 }
