--- a/src/scss/layouts/layout_1200/_form.scss
+++ b/src/scss/layouts/layout_1200/_form.scss
@@ -1,32 +1,33 @@
 .form {
-  // width: 80%;
-  // max-width: 1800px;
-  background-repeat: no-repeat;
-  background-image: url(../../../i/img/form-bg.jpg);
-  background-size: cover;
-  background-position: top;
-
-  &_img {
-    width: 90%;
-    max-width: 300px;
-  }
-
-  &_btn {
-    font-size: 16px;
-  }
-
-  &_text {
-    margin-bottom: 15px;
-  }
+  display: grid;
+  grid-template-areas:
+    "title img"
+    "main img";
+  column-gap: 50px;
+  background-image: none;
+  background: linear-gradient(180deg, #ffd600 0%, #ffd910 100%);
+}
+.form_img-1500 {
+  display: block;
+  grid-area: img;
+  width: 100%;
+  max-width: 390px;
+}
+.form_img {
+  display: none;
+}
+.form_title {
+  grid-area: title;
+  max-width: 760px;
 }
 
 .form_for-1200 {
-  display: flex;
-  gap: 40px;
-  justify-content: center;
+  grid-area: main;
+}
+.form_text {
+  width: 100%;
+}
 
-  &_text {
-    display: flex;
-    flex-direction: column;
-  }
+.form_btn {
+  padding: 30px 115px;
 }
