--- a/src/scss/layouts/layout_1200/_header.scss
+++ b/src/scss/layouts/layout_1200/_header.scss
@@ -1,46 +1,10 @@
 .header {
-  &_menu {
-    display: none;
-  }
-
-  &_logo {
-    display: block;
-  }
-
+  display: grid;
+  grid-template-columns: 2fr 3fr 2fr;
   &_text-logo {
-    display: none;
-  }
-}
-
-// --Список вкладок
-.header_tabs {
-  display: block;
-
-  &_list {
-    list-style-type: none;
-    padding-inline-start: 0;
     display: flex;
-    gap: 30px;
-    &_item {
-    }
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
   }
-}
-
-.tabs-link {
-  text-decoration: none;
-  color: #8845ac;
-  font-weight: 700;
-  border-radius: 40px;
-
-  &:hover {
-    background-color: #8845ac;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 40px;
-    box-shadow: 0 8px 15px rgba(157, 52, 184, 0.25);
-  }
-}
-
-.burger {
-  display: none;
 }
