--- a/src/scss/layouts/layout_1200/_heroes.scss
+++ b/src/scss/layouts/layout_1200/_heroes.scss
@@ -1,40 +1,17 @@
 .heroes {
-  max-width: 100%;
-  width: 90%;
-
-  margin-right: auto;
-  margin-left: auto;
-  background-color: #3da3e1;
-  border-radius: 40px;
-  padding-bottom: 60px;
-  box-shadow: 0px 40px 65px 5px rgba(61, 163, 225, 0.5);
   &_title {
+    width: 80%;
     &_name {
-      padding-top: 60px;
-      color: white;
-    }
-
-    &_text1 {
-      font-weight: 700;
-      color: #691775;
+      font-size: 50px;
+      line-height: 55px;
     }
   }
 
   &_grid {
-    max-width: 1000px;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas:
-      "first sec third"
-      "forth fifth  sixth"
-      "seventh seventh seventh";
-
+    max-width: 1160px;
     &_block {
-      &_3 {
-        margin-top: 55px;
-      }
-
       // &_7 {
-      //   width: 313.33px;
+      //   width: 366.66px;
       // }
     }
   }
