--- a/src/scss/layouts/layout_1200/_prices.scss
+++ b/src/scss/layouts/layout_1200/_prices.scss
@@ -1,34 +1,53 @@
 .prices {
-  max-width: 1000px;
-
-  &_title {
-    font-size: 45px;
-    line-height: 45px;
-    // margin-bottom: 40px;
-  }
+  max-width: 85%;
 
   &_pack {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 40px;
+
     &_block {
-      width: 400px;
-      max-width: 400px;
+      width: 100%;
+      max-width: 100%;
+      min-width: 300px;
+      //   width: 320px;
+      //   max-width: 320px;
+
+      &_listin {
+        height: 500px;
+      }
+
+      &_1 {
+        height: initial;
+      }
+      &_2 {
+        height: initial;
+      }
+
+      &_price_2_old {
+        margin-top: 0;
+      }
+      &_price_3_old {
+        margin-top: 0;
+      }
 
       &_price_1 {
-        margin-top: 100px;
+        margin-top: 48px;
       }
     }
   }
 
-  &_avreise {
-    font-size: 36px;
-  }
-  &_kaker {
-    font-size: 36px;
-    margin-top: 20px;
+  &_extra {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
+
 .grid-1 {
-  gap: 0px;
+  gap: 20px;
 }
 .grid-2 {
-  gap: 0px;
+  gap: 20px;
 }
