--- a/src/scss/layouts/layout_1200/_why.scss
+++ b/src/scss/layouts/layout_1200/_why.scss
@@ -1,14 +1,15 @@
 .why {
   &_list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 20px;
-    row-gap: 10px;
-    width: 800px;
-    max-width: 800px;
-
+    width: 1000px;
+    max-width: 1000px;
     &_item {
-      padding: 30px 36px;
+      font-size: 27px;
+      line-height: 30px;
+      padding: 30px 50px;
+
+      &_img {
+        width: 70px;
+      }
     }
   }
 }
