--- a/src/scss/layouts/layout_576/_overlay.scss
+++ b/src/scss/layouts/layout_576/_overlay.scss
@@ -1,35 +1,35 @@
-// .overlayhelter-block {
-//   max-width: 500px;
-// }
+.overlayhelter-block {
+  max-width: 500px;
+}
 
-// .overlayhelter-title {
-//   font-size: 26px;
-// }
+.overlayhelter-title {
+  font-size: 26px;
+}
 
-// .overlayhelter-price-number {
-//   font-size: 16px;
-// }
-// .overlayhelter-price-text {
-//   font-size: 16px;
-// }
-// /* Подзаголовки и текст */
-// .overlayhelter-textblock-subtitle,
-// .overlayhelter-textblock-subtitle-2 {
-//   font-size: 22px;
-// }
-// .overlayhelter-textblock-subtitle-text,
-// .overlayhelter-textblock-extratext {
-//   font-size: 16px;
-// }
-// .overlayhelter-textblock-grid-item p {
-//   font-size: 16px;
-// }
+.overlayhelter-price-number {
+  font-size: 16px;
+}
+.overlayhelter-price-text {
+  font-size: 16px;
+}
+/* Подзаголовки и текст */
+.overlayhelter-textblock-subtitle,
+.overlayhelter-textblock-subtitle-2 {
+  font-size: 22px;
+}
+.overlayhelter-textblock-subtitle-text,
+.overlayhelter-textblock-extratext {
+  font-size: 16px;
+}
+.overlayhelter-textblock-grid-item p {
+  font-size: 16px;
+}
 
-// /* Видео */
-// .overlayhelter-video {
-//   max-width: 380px;
-// }
+/* Видео */
+.overlayhelter-video {
+  max-width: 380px;
+}
 
-// .overlayhelter-textblock {
-//   max-width: 380px;
-// }
+.overlayhelter-textblock {
+  max-width: 380px;
+}
