--- a/src/scss/layouts/layout_768/_heroes.scss
+++ b/src/scss/layouts/layout_768/_heroes.scss
@@ -23,14 +23,17 @@
       "third  forth"
       "fifth  sixth";
     &_block {
-      padding-top: 160px;
+      padding-top: 20px;
       width: 100%;
       margin-bottom: 25px;
 
       &_heroes {
         display: flex;
         justify-content: center;
-        align-items: center;
+        margin-top: 0;
+        margin-bottom: auto;
+        padding-bottom: 20px;
+        // align-items: center;
       }
 
       &_1 {
@@ -59,7 +62,7 @@
 
     &_block_img {
       width: 200px;
-      max-width: 2000px;
+      max-width: 200px;
       top: -120px;
 
       &_2 {
