--- a/src/scss/layouts/layout_000/_tilleg.scss
+++ b/src/scss/layouts/layout_000/_tilleg.scss
@@ -141,7 +141,7 @@
   height: fit-content;
   position: relative;
   border-radius: 0 0 40px 40px;
-  background-image: url(/i/img/kids.jpg);
+  background-image: url(/i/img/tilleghover.jpg);
   background-size: cover;
   background-position: top;
   margin-top: auto;
