--- a/src/scss/layouts/layout_768/_overlay.scss
+++ b/src/scss/layouts/layout_768/_overlay.scss
@@ -14,7 +14,7 @@
       rgba(238, 110, 245, 0.5),
       rgba(87, 185, 255, 0.5)
     ),
-    url(../../../i/img/backoverlay-horisont.png);
+    url(../../../i/img/baloong-horisont.png);
   background-position: right;
 }
 .overlayhelter-title {
@@ -52,3 +52,15 @@
 .overlayhelter-price {
   text-align: center;
 }
+// .tilleg_itemblock {
+//   width: 100%; /* вся ширина */
+//   height: 100%; /* растянуть на всю высоту родителя */
+//   object-fit: cover; /* сохранить пропорции, лишнее обрежется */
+//   flex: 1;
+// }
+// .tilleg_item-img {
+//   width: 100%; /* вся ширина */
+//   height: 100%; /* растянуть на всю высоту родителя */
+//   object-fit: cover; /* сохранить пропорции, лишнее обрежется */
+//   flex: 1;
+// }
