--- a/src/scss/layouts/layout_000/_overlay.scss
+++ b/src/scss/layouts/layout_000/_overlay.scss
@@ -15,12 +15,18 @@
   text-align: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   position: relative;
+  // background-image: linear-gradient(
+  //     90deg,
+  //     rgba(238, 110, 245, 0.5),
+  //     rgba(87, 185, 255, 0.5)
+  //   ),
+  //   url(../../../i/img/backoverlay.png);
   background-image: linear-gradient(
       90deg,
       rgba(238, 110, 245, 0.5),
       rgba(87, 185, 255, 0.5)
     ),
-    url(../../../i/img/backoverlay.png);
+    url(../../../i/img/baloong.png);
   background-size: cover;
   background-position: center;
   border-radius: 20px;
