--- a/src/scss/layouts/layout_992/_tilleg.scss
+++ b/src/scss/layouts/layout_992/_tilleg.scss
@@ -102,9 +102,8 @@
 .tilleg_list_frame:hover .tilleg_item-img {
   visibility: hidden;
 }
-
 .tilleg_list_frame:hover .tilleg-help-block {
-  background-image: url(/i/img/kids.jpg);
+  background-image: url(/i/img/tilleghover.jpg);
   background-size: cover;
   background-position: top;
   background-color: rgba(58, 58, 58, 0.95);
