--- a/src/scss/layouts/layout_000/_overlay.scss
+++ b/src/scss/layouts/layout_000/_overlay.scss
@@ -132,8 +132,10 @@
 }
 
 .overlayhelter-textblock-grid-item img {
-  width: 70px;
-  height: 140px;
+  // width: 70px;
+  // height: 140px;
+  width: 125px;
+  height: 200px;
   object-fit: cover;
   margin-left: auto;
   margin-right: auto;
