--- a/src/scss/layouts/layout_000/_feedback.scss
+++ b/src/scss/layouts/layout_000/_feedback.scss
@@ -4,7 +4,9 @@
   max-width: 470px;
   margin-left: auto;
   margin-right: auto;
-  background-image: url(/i/img/feedback-bg-s.jpg);
+  text-align: center;
+  background-image: url(/i/img/bgfeedback.jpg);
+  opacity: 0.9;
   background-size: cover;
   background-position-x: center;
   background-position-y: bottom;
@@ -27,35 +29,9 @@
     margin-bottom: 40px;
     padding-top: 40px;
   }
-
   &_img {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  &_text {
-    width: 310px;
-    max-width: 310px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 24px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 1.2px;
-    font-weight: 800;
-    font-family: $wowFontFamily;
-    color: white;
-    padding: 75px 0 40px;
-  }
-
-  &_shape {
-    background-image: url(/i/img/feedback-shape-s.jpg);
-    background-size: cover;
-    background-position-x: center;
-    background-position-y: top;
-    width: 100%;
-    height: 100%;
-    border-radius: 0 0 40px 40px;
   }
 }
