--- a/src/scss/layouts/layout_1200/_prices.scss
+++ b/src/scss/layouts/layout_1200/_prices.scss
@@ -1,27 +1,21 @@
 .prices {
   max-width: 85%;
-
   &_pack {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 40px;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 40px;
 
     &_block {
       width: 100%;
-      max-width: 100%;
+      max-width: 600px;
       min-width: 300px;
-     
-
+      height: 690px;
       &_listin {
         height: 500px;
-      }
-
-      &_1 {
-        height: initial;
-      }
-      &_2 {
-        height: initial;
       }
 
       &_price_2_old {
@@ -36,7 +30,6 @@
       }
     }
   }
-
   &_extra {
     max-width: 900px;
     margin-left: auto;
@@ -44,9 +37,3 @@
   }
 }
 
-.grid-1 {
-  gap: 20px;
-}
-.grid-2 {
-  gap: 20px;
-}
