--- a/src/scss/layouts/layout_000/_prices.scss
+++ b/src/scss/layouts/layout_000/_prices.scss
@@ -188,6 +188,7 @@
       color: #3a3a3a;
       font-size: 18px;
       line-height: 50px;
+      padding-inline-start: 30px;
 
       &_num {
         background-color: #e5206b;
